--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,10 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# compiled output
-
-/tmp
+/dist
 /out-tsc
-# Only exists if Bazel was run
-/bazel-out
 
 # dependencies
 /node_modules
 
 
 .DS_Store
-.env
 
-apiFinanzas.code-workspace
